fixed some image alignment issues

--- a/src/components/DailyCare.css
+++ b/src/components/DailyCare.css
@@ -18,11 +18,12 @@
    .daily-care-section {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto auto auto;
+    align-content: start;
     width: 100%;
-    min-height: 100vh;
+    aspect-ratio: 2730 / 3753;
     background-size: cover;
-    background-position: center;
+    background-position: center top;
     background-repeat: no-repeat;
     padding: 4vw 0;
     box-sizing: border-box;
@@ -355,6 +356,15 @@
   }
   
   /* =========================
+     DAILY CARE BUTTON PLACEMENT
+     ========================= */
+
+  .daily-care-button {
+    grid-column: 1 / 3;
+    grid-row: 4;
+  }
+
+  /* =========================
      RESPONSIVE: MOBILE STACK
      ========================= */
   
@@ -363,6 +373,8 @@
       display: flex;
       flex-direction: column;
       padding: 3vw 0;
+      aspect-ratio: unset;
+      min-height: auto;
     }
   
     /* Mobile ordering */
@@ -425,7 +437,7 @@
     }
   
     .header-underline {
-      width: 100%
+      width: 100%;
       /* margin-right: -4vw; */
     }
   
@@ -477,6 +489,10 @@
     
     .teal-2 .teal-box-subheader {
       font-size: 4.5vw;
+    }
+
+    .daily-care-button {
+      order: 6;
     }
   }
   
